<resources>
    <string name="app_name">Амброзия</string>
    <string name="title_activity_maps">Амброзия</string>
    <string name="questionText">Вы можете помогать администрации бороться с сорной растительностью,
        фотографируя кусты амброзии и создавая метки её произростания на карте города</string>


    <string name="description1">Куст амброзии до цветения</string>
    <string name="description2">Куст амброзии во время цветения</string>
    <string name="description3">Листья амброзии похожи на папоротник, верхние имеют компьвидную форму,
                нижние — яйцевидную или ромбовидную.
                Самые верхние листья обычно значительно меньше в размерах и менее разделены, чем нижние.
                Также на листьях присутствуют волоски, особенно на нижней стороны листа.</string>
    <string name="description4">Форма соцветий — колосья, состоящие из маленьких цветков,
                чаще всего образуются на верхних стеблях, 3–4 см в длину, у некоторых видов
                могут доходить до 7–10 см. Цветение происходит в основном летом и ранней осенью.</string>
    <string name="description5">Стебель растения прямой, имеет красноватый или коричневато-зелёный цвет.
                На стебле амброзии всегда присутствуют щетинки.</string>
    <string name="description6">1. Золотарник - цветки трубчатые, лимонного цвета, у амброзии цвет соцветий зелёный.</string>
    <string name="description7">2. Полынь обыкновенная - отличие от амброзии в том что на стебле нет волосков,
                другая форма цветка и более бледный цвет.</string>
</resources>